src/objects/NttDataEpa__Picklist_Mapping__c.object
<CustomObject>
    <description>Maps from picklists defined by object and field to LOV name.</description>
    <fields>
        <fullName>NttDataEpa__External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for updates by Data Loader only.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for updates by Data Loader only.</inlineHelpText>
        <label>External Key</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NttDataEpa__Field_Name__c</fullName>
        <description>The API name of a field mentioned by an object named in Object Name in SFDC.</description>
        <inlineHelpText>The API name of a field mentioned by an object named in Object Name in SFDC.</inlineHelpText>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Integration_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked if this LOV is used in EP only and does not relate to a picklist in SFDC.</description>
        <inlineHelpText>Should be checked if this LOV is used in EP only and does not relate to a picklist in SFDC.</inlineHelpText>
        <label>Integration Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Object_Name__c</fullName>
        <description>The API name of an object in SFDC.</description>
        <inlineHelpText>The API name of an object in SFDC.</inlineHelpText>
        <label>Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Picklist Mapping</label>
    <listViews>
        <fullName>NttDataEpa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NttDataEpa__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LOV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NttDataEpa__Integration_Only_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( NttDataEpa__Integration_Only__c = TRUE &amp;&amp; OR(NOT(ISBLANK( NttDataEpa__Object_Name__c )), NOT( ISBLANK( NttDataEpa__Field_Name__c ))) , NttDataEpa__Integration_Only__c = FALSE &amp;&amp; OR(ISBLANK( NttDataEpa__Object_Name__c ),ISBLANK( NttDataEpa__Field_Name__c )))</errorConditionFormula>
        <errorMessage>If Integration Only is not set, you have to define an Object Name and a Field Name otherwise you must not set Object Name and Field Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NttDataEpa__LOV_Name_Syntax</fullName>
        <active>true</active>
        <description>Checks the LOV syntax.</description>
        <errorConditionFormula>NOT(REGEX( Name , &quot;[A-Z]{1}[A-Z0-9_]*&quot;))</errorConditionFormula>
        <errorMessage>The LOV name may consist of latin upper cases, arabic numbers and underlines only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NttDataEpa__Validate_External_Key_Syntax</fullName>
        <active>true</active>
        <description>Check that the syntax of the External Key is correct.</description>
        <errorConditionFormula>NOT(BEGINS(NttDataEpa__External_Key__c, &apos;PM-&apos;)) || NOT(ISNUMBER( RIGHT(NttDataEpa__External_Key__c, 6)))</errorConditionFormula>
        <errorMessage>The syntax of the external key must match PM-{000000}.</errorMessage>
    </validationRules>
</CustomObject>